[tool.poetry]
name = "code-breaker"
version = "1.0.0"
description = "A simple code breaking challenge"
authors = ["malathair <malathair@spectregate.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
